--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Custom folders/files
+infra/cloudrun/
+!infra/cloudrun/*template.yaml
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
