--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,13 @@ gunicorn = "^21.2.0"
 uvicorn = "^0.23.2"
 fastapi = "^0.101.1"
 python-json-logger = "^2.0.7"
+pydantic = "^2.1.1"
+google-cloud-datastore = "^2.17.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
 requests = "^2.31.0"
+httpx = "^0.24.1"
 
 [build-system]
 requires = ["poetry-core"]
