--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ fastapi = "^0.101.1"
 python-json-logger = "^2.0.7"
 pydantic = "^2.1.1"
 google-cloud-datastore = "^2.17.0"
+google-cloud-pubsub = "^2.18.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
