amend docker commands

--- a/infra/cloudbuild.yaml
+++ b/infra/cloudbuild.yaml
@@ -13,14 +13,14 @@ steps:
     args:
       - '-c'
       - |
-        docker exec mloh-sandbox /bin/sh -c "poetry run pytest /home/appuser/tests/unit_tests/ -disable-warnings -vv -s"
+        docker exec mloh-sandbox /bin/sh -c "poetry run pytest /home/appuser/tests/unit_tests/ --disable-warnings -vv -s"
   - name: gcr.io/cloud-builders/docker
     id: integration-tests
     entrypoint: /bin/bash
     args:
       - '-c'
       - |
-        docker exec mloh-sandbox /bin/sh -c "poetry run pytest /home/appuser/tests/integration_tests/ -disable-warnings -vv -s"
+        docker exec mloh-sandbox /bin/sh -c "poetry run pytest /home/appuser/tests/integration_tests/ --disable-warnings -vv -s"
   - name: gcr.io/cloud-builders/docker
     id: build-dev
     entrypoint: /bin/bash
